--- a/lista.html
+++ b/lista.html
@@ -7,10 +7,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="public/styles/style-lista.css">
+    <link rel="stylesheet" href="public/styles/style-lista-tabla.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hültár - Főmenü</title>
+    <script defer src="public/lista-vegleges.js"></script>
     <script defer src="public/lista-keszen.js"></script>
     <script defer src="public/lista-uj.js"></script>
     <script defer src="public/lista.js"></script>
@@ -18,26 +20,34 @@
 </head>
 
 <body>
+
+    <div class="kocsi"><img draggable="false" src="public/kepek/kocsi.png" alt=""></div>
+
     <div class="lista-cimke">
-        <h3>Bevásárló lista</h3>
+        <h3>Bevásárló lista <i class="fas fa-clipboard-list"></i></h3>
     </div>
 
-    
-    <div>
-        <table id="tablazat">
-            <tr>
-                <td colspan="5" class="termek"><i class="fas fa-shopping-cart"></i></td>
-            </tr>
+<div class="egesz">
 
+    <div class="tablazat-div">
+
+
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th colspan="4" style="text-align: center; font-size: 20px;"><i class="fas fa-shopping-cart"></i></th>
+                </tr>
+            </thead>
+
+            <tbody id="tablazat"></tbody>
         </table>
-    </div>
 
-    <div class="elvalaszto-csik">
-        <br>
-        <hr>
+
     </div>
 
     <div class="uj-hozzaadasa">
+
+
         <div class="lista-cimke">
             <h3>Új felvétele</h3>
         </div>
@@ -49,19 +59,17 @@
         </label>
         <label for="mertekegyseg">
             <select name="mertekegyseg" id="uj-mertekegyseg">
-                <option value="db">Darab</option>
+                <option value="darab">Darab</option>
                 <option value="doboz">Doboz</option>
-                <option value="l">Liter</option>
-                <option value="kg">Kiló</option>
+                <option value="liter">Liter</option>
+                <option value="kiló">Kiló</option>
             </select>
-        </label><br>
+        </label>
 
-        <button id="uj-hozzaadas-gomb">Hozzáadás</button>
+        <br><button id="uj-hozzaadas-gomb">Hozzáadás</button>
+        <br><button style="cursor: default; opacity: 0;">Hozzáadás</button>
 
-        <div class="elvalaszto-csik">
-            <hr>
-        </div>
     </div>
-
-</body>
+</div>
+<i id="vissza-gomb" style="text-align: center; cursor: pointer;" onclick="window.location.href ='index.html'" class="fas fa-undo-alt"></i>
 </html>
